# nxshell

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
crates/alacritty_terminal/: Cargo.toml  README.md
crates/alacritty_terminal/src/: event_loop.rs  index.rs  selection.rs  vi_mode.rs
crates/alacritty_terminal/src/grid/: resize.rs  storage.rs
crates/alacritty_terminal/src/term/: cell.rs  mod.rs  search.rs
crates/alacritty_terminal/src/tty/: unix.rs
crates/alacritty_terminal/src/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
crates/catppuccin-egui/: Cargo.toml
crates/catppuccin-egui/src/: lib.rs  themes.rs  themes.rs.tera
crates/egui-dock/: Cargo.toml
crates/egui-dock/src/: style.rs
crates/egui-dock/src/widgets/dock_area/: drag_and_drop.rs
crates/egui-dock/src/widgets/dock_area/show/: leaf.rs  window_surface.rs
crates/egui-form/: Cargo.toml
crates/egui-form/examples/: egui_form_minimal.rs
crates/egui-form/src/: garde.rs  lib.rs  validation_report.rs  validator.rs
crates/egui-term/: Cargo.toml  README.md
crates/egui-term/examples/: custom_bindings.rs  sftp.rs  tabs.rs  themes.rs
crates/egui-term/src/: bindings.rs  errors.rs  font.rs  lib.rs  scroll_bar.rs  theme.rs  view.rs
crates/egui-term/src/alacritty/: mod.rs
crates/egui-term/src/display/: color.rs  mod.rs  sftp.rs
crates/egui-term/src/input/: mod.rs
crates/egui-term/src/ssh/: mod.rs
crates/egui-term/src/ui/: menu.rs
crates/egui-theme-switch/: Cargo.toml
crates/egui-theme-switch/src/: cogwheel.rs  lib.rs  rotated_rect.rs
crates/egui-toast/: Cargo.toml
crates/egui-toast/src/: lib.rs
nxshell/: Cargo.toml
nxshell/src/: app.rs  db.rs  errors.rs  lib.rs
nxshell/src/consts/: id.rs  mod.rs
nxshell/src/ui/: menubar.rs  mod.rs
nxshell/src/ui/form/: mod.rs  session.rs
nxshell/src/ui/side_panel/: mod.rs
nxshell/src/ui/tab_view/: mod.rs  session.rs  terminal.rs
