[workspace]
resolver = "2"
members = [
    "crates/catppuccin-egui",
    "crates/egui-dock",
    "crates/egui-form",
    "crates/egui-term",
    "crates/egui-theme-switch",
    "crates/egui-toast",
    "nxshell",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["iamazy <iamazy.me@outlook.com>"]
documentation = "https://github.com/iamazy/nxshell"
homepage = "https://github.com/iamazy/nxshell"
repository = "https://github.com/iamazy/nxshell"
categories = ["terminal", "egui"]
keywords = ["terminal", "egui"]

[workspace.dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty" }
anyhow = "1"
catppuccin-egui = { git = "https://github.com/iamazy/catppuccin-egui", branch = "egui30" }
chrono = "0.4"
copypasta = "0.10"
duplicate = "2"
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
egui-file-dialog = "0.9"
egui-theme-switch = "0.2.3"
egui-toast = "0.16"
garde = "0.22"
homedir = "0.3"
indexmap = "2"
open = "5"
orion = "0.17"
parking_lot = "0.12"
paste = "1"
polling = "3"
rusqlite = "0.33"
rustix = "0.38"
serde = "1"
smol = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
validator = "0.20"
wezterm-ssh = { git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }
windows = "0.59"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
