[workspace]
resolver = "2"
members = [
    "crates/egui-term",
    "crates/egui-toast",
    "nxshell",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["iamazy <iamazy.me@outlook.com>"]
documentation = "https://github.com/iamazy/nxshell"
homepage = "https://github.com/iamazy/nxshell"
repository = "https://github.com/iamazy/nxshell"
categories = ["terminal", "egui"]
keywords = ["terminal", "egui"]

[workspace.dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty" }
anyhow = "1"
catppuccin-egui = { version = "5.6", default-features = false }
chrono = "0.4"
copypasta = "0.10"
eframe = "0.32"
egui = "0.32"
egui_dock = "0.17"
egui_extras = "0.32"
egui_form = "0.6"
egui-phosphor = "0.10"
egui-theme-switch = "0.4"
garde = "0.22"
homedir = "0.3"
indexmap = "2"
open = "5"
orion = "0.17"
parking_lot = "0.12"
polling = "3"
rusqlite = "0.33"
rustix = "0.38"
signal-hook = "0.3"
smol = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
wezterm-ssh = { git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }
windows = "0.59"
wgpu = "25"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
