[package]
name = "catppuccin-egui"
version = "5.3.1"
authors = ["Sam Nystrom <sam@samnystrom.dev>"]
edition = "2021"
description = "Soothing pastel theme for egui."
documentation = "https://docs.rs/catppuccin-egui/"
readme = "README.md"
homepage = "https://github.com/catppuccin/egui"
repository = "https://github.com/catppuccin/egui"
license = "MIT"
keywords = ["egui", "catppuccin", "theme", "gui"]
categories = ["gui"]
exclude = ["assets/", "src/themes.rs.tera"]

[dependencies]
egui.workspace = true

[dev-dependencies]
eframe.workspace = true
