[package]
name = "egui_form"
version = "0.4.0"
edition = "2021"
description = "Form validation for egui"
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui"
homepage = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_form"
keywords = ["egui", "form", "validation"]

[package.metadata.docs.rs]
all-features = true

[features]
validator_garde = ["dep:garde"]
validator_validator = ["dep:validator"]

[[example]]
name = "garde"
required-features = ["validator_garde"]
test = true

[[example]]
name = "validator"
required-features = ["validator_validator"]
test = true

[[example]]
name = "egui_form_minimal"
required-features = ["validator_garde"]

[dependencies]
egui.workspace = true

garde = { workspace = true, optional = true }
validator = { workspace = true, optional = true }

[dev-dependencies]
eframe = { workspace = true, features = ["default"] }
garde = { workspace = true, features = ["email", "derive"] }
validator = { workspace = true, features = ["derive"] }
